<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Yamba 1</string>

  <string name="titleYamba">Yamba</string>
  <string name="titleStatus">Status Update</string>
  <string name="titleTimeline">Time Line</string>

  <string name="hintText">Please enter your 140-character status</string>
  <string name="buttonUpdate">Update</string>
  <string name="titleUsername">Username</string>
  <string name="titlePassword">Password</string>
    <string name="titleRefresh">Refresh</string>
  
  <string name="titleApiRoot">ApiRoot</string>
  <string name="titlePrefs">Preferences</string>
    <string name="titleServiceStop">Stop Service</string>
    <string name="titleServiceStart">Start Service</string>
      <string name="msgLastTimelineUpdate">Last Line Updatee</string>
  <string-array name="providers">
    <item>None, please</item>
    <item>GPS via satellites!</item>
    <item>Mobile Network will do</item>
  </string-array>

  <string-array name="providerValues">
    <item>NONE</item>
    <item>gps</item>
    <item>network</item>
  </string-array>
  <string-array name="interval">
    <item>Never</item>
    <item>Fifteen minutes</item>
    <item>Half hour</item>
    <item>An hour</item>
    <item>Half day</item>
    <item>Day</item>
  </string-array>

  <!--  -->
  <string-array name="intervalValues">
    <item>0</item>
    <item>900000</item>
    <item>1800000</item>
    <item>3600000</item>
    <item>43200000</item>
    <item>86400000</item>
  </string-array>
</resources>