<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@android:drawable/ic_menu_preferences" android:title="@string/titlePrefs" android:id="@+id/itemPrefs"></item>
    <item android:title="@string/titleServiceStart" android:id="@+id/itemToogleService"
    android:icon="@android:drawable/ic_media_play"></item>  <!--  -->
  <item android:title="@string/titleServiceStop" android:id="@+id/itemPurge"
    android:icon="@android:drawable/ic_media_pause"></item> <!--  -->
      <item android:title="@string/titleTimeline" android:id="@+id/itemTimeline"
    android:icon="@android:drawable/ic_media_pause"></item> <!--  -->
      <item android:title="@string/titleStatus" android:id="@+id/itemStatus"
    android:icon="@android:drawable/ic_media_pause"></item> <!--  -->
</menu>
